# remote_controller_jbg

./: CMakeLists.txt  prj.conf
src/: main.c
src/remote_service/: remote.c  remote.h
